--- a/Notebook/Calling+LPSOLVE+from+Python.ipynb
+++ b/Notebook/Calling+LPSOLVE+from+Python.ipynb
@@ -8,14 +8,16 @@
     "\n",
     "**LPSOLVE** is an excellent open source solver for mathematical programming problems. It can be used for linear (LP), integer (IP) and mixed integer linear (MILP) problems. It is distributed under the [GNU Lesser General Public License](https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License \"GNU Lesser General Public License\"). \n",
     "\n",
-    "[http://lpsolve.sourceforge.net/5.5/](http://lpsolve.sourceforge.net/5.5/ \"LPSOLVE\")\n",
-    "\n",
-    "This tutorial shows how to use LPSOLVE from Python. \n",
+    "All documentation for LPSOLVE can be found [here](http://lpsolve.sourceforge.net/5.5/ \"LPSOLVE\"). This short tutorial shows how to use LPSOLVE from Python in Windows. It is also available as a Jupiter notebook here **xxxx**.\n",
     "\n",
     "\n",
-    "<h2 style=\"color:blue;\">Installation</h2> \n",
+    "<h2 style=\"color:blue;\">Installation of LPSOLVE in Windows</h2> \n",
     "\n",
-    "Visit the page [http://www.lfd.uci.edu/~gohlke/pythonlibs/](http://www.lfd.uci.edu/~gohlke/pythonlibs/ \"Unofficial Windows Binaries for Python Extension Packages\") and find the appropriate Python wheel package under the heading:    \n",
+    "There are several articles on running LPSOLVE from Python and even a package for it, [PyLPSolve](http://www.stat.washington.edu/~hoytak/code/pylpsolve/ \"PyLPSolve\"). But PyLPSolve cannot yet be installed on Windows. Personally, I had also problems with the instructions in [LPSOLVE pages](http://lpsolve.sourceforge.net/5.5/Python.htm \"Using lpsolve from Python\"). Some other unofficial distributions do not work with Windows 64-bit.  \n",
+    "\n",
+    "Probably a general solution is the one found in [this post](http://stackoverflow.com/questions/23411205/how-to-use-lpsolve-from-python-in-windows-64bit \"Post\").\n",
+    "\n",
+    "So, visit the page [http://www.lfd.uci.edu/~gohlke/pythonlibs/](http://www.lfd.uci.edu/~gohlke/pythonlibs/ \"Unofficial Windows Binaries for Python Extension Packages\") and find the appropriate Python wheel package under the heading:    \n",
     "\n",
     "> lp_solve, a Mixed Integer Linear Programming (MILP) solver.\n",
     "\n",
@@ -23,6 +25,7 @@
     "\n",
     "> lpsolve55‑5.5.2.5‑cp35‑cp35m‑win_amd64.whl\n",
     "\n",
+    "Locate the folder with the wheel file and follow the usual pip -install procedure. \n",
     "\n",
     "<h2 style=\"color:blue;\">The example problem: Warehouse location</h2> \n",
     "\n",
@@ -60,7 +63,8 @@
     "|:--:|:--:|:--:|:--:|:--:|\n",
     "| 1  |  4 | 2  |  1 |  3 |\n",
     "\n",
-    "The **mathematical programming formulation** is given below. cij , i=1,...,10  j=1,...,5 are the operating costs and fj, j=1,...,5 are the capacities of the locations.\n",
+    "The **mathematical programming formulation** is given below. cij , i=1,...,10 ; j=1,...,5 are the operating costs and  \n",
+    "fj, j=1,...,5 are the capacities of the locations.\n",
     "\n",
     "- The wij binary variables denote the assignments of demand points to locations : wij=1 if demand point i is assigned to location j, otherwise 0. \n",
     "- The dj binary variables indicate the selected locations: dj=1 if location j is used, otherwise 0. \n",
@@ -75,12 +79,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we import numpy and the LPSOLVE library. The library exposes only a function lpsolve() therefore we import 'all' to avoid writing lpsolve55.lpsolve() at each call. "
+    "First we import numpy and the LPSOLVE library. The library exposes only one wrapper function lpsolve() therefore we import 'all' to avoid writing lpsolve55.lpsolve() at each call. \n",
+    "\n",
+    "A complete list of the LPSOLVE API can be found in [LPSOLVE pages](http://lpsolve.sourceforge.net/5.5/ \"LPSOLVE\")."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -176,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -195,14 +201,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now define the constraints one by one. First is the set of 10 constraints which ensures that each demand point is assigned to exactly one location. For each one, we pass to 'add_constraint' a list with the coefficients, the type of the constraint (here 'EQ' meaning equality) and the RHS. "
+    "We can now define the constraints one by one. First is the set of 10 constraints which ensures that each demand point is assigned to exactly one location. For each one, we pass to 'add_constraint' a list with the coefficients, the type of the constraint (here 'EQ' meaning equality) and the RHS. We also set the name of each constraint with 'set_row_name'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 122,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -211,7 +217,8 @@
     "    const_names = ['w'+str(i)+str(j) for j in range(1,6)]\n",
     "    indices = [col_names.index(name) for name in const_names]\n",
     "    values = np.zeros(ncols) ; values[indices]=1.\n",
-    "    lpsolve('add_constraint',lp, values, 'EQ', 1.0)"
+    "    lpsolve('add_constraint',lp, values, 'EQ', 1.0)\n",
+    "    lpsolve('set_row_name',lp,i,'FIRST'+str(i))"
    ]
   },
   {
@@ -223,9 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 123,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -236,7 +243,8 @@
     "    values = np.zeros(ncols) ; values[indices]=1.\n",
     "    index = col_names.index('d'+str(j))\n",
     "    values[index] = -f[j-1]\n",
-    "    lpsolve('add_constraint',lp, values, 'LE', 0.0)"
+    "    lpsolve('add_constraint',lp, values, 'LE', 0.0)\n",
+    "    lpsolve('set_row_name',lp,10+j,'SECOND'+str(j))"
    ]
   },
   {
@@ -245,14 +253,14 @@
    "source": [
     "The last step is to define all variables as binary using 'set_binary'. The last argument (1) is a True flag.\n",
     "\n",
-    "We also export the model in a file, in LP format. xxxxx\n",
+    "We also export the model in a file, in LP format. This can be used for confirmation or read from the [LPSOLVE IDE](http://lpsolve.sourceforge.net/5.5/IDE.htm \"LPSOLVE IDE\").\n",
     "\n",
-    "Finally, we call 'solve'. The return code is 0 (success)."
+    "Finally, we call 'solve'. The return code is 0 (success). We can now retrieve the value of the objective function ('get_objective') and the values of the non-zero variables in the solution ('get_variables') using the first element returned. We do NOT dimension any variable to accept the variables as the lpsolve driver takes care of the dimensioning. The same applies for the call to 'get_constraints' to retrieve the LHS at the optimal solution.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +288,28 @@
       "d1   =   1.00\n",
       "d2   =   1.00\n",
       "d3   =   1.00\n",
-      "d5   =   1.00\n"
+      "d5   =   1.00\n",
+      "\n",
+      "constraints LHS:\n",
+      "\n",
+      "FIRST1   =   1.00\n",
+      "FIRST2   =   1.00\n",
+      "FIRST3   =   1.00\n",
+      "FIRST4   =   1.00\n",
+      "FIRST5   =   1.00\n",
+      "FIRST6   =   1.00\n",
+      "FIRST7   =   1.00\n",
+      "FIRST8   =   1.00\n",
+      "FIRST9   =   1.00\n",
+      "FIRST10  =   1.00\n",
+      "SECOND1  =   0.00\n",
+      "SECOND2  =   0.00\n",
+      "SECOND3  =   0.00\n",
+      "SECOND4  =   0.00\n",
+      "SECOND5  =   0.00\n",
+      "\n",
+      "verification:\n",
+      "\n"
      ]
     }
    ],
@@ -300,8 +329,39 @@
     "for i in range(len(vars)):\n",
     "    if vars[i] > 1e-6:\n",
     "        print('{:4s} = {:6.2f}'.format(col_names[i],vars[i]))\n",
+    "        \n",
+    "cons = lpsolve('get_constraints', lp)[0]      \n",
+    "print('\\nconstraints LHS:\\n')\n",
+    "for i in range(len(cons)):\n",
+    "    nm = lpsolve('get_row_name',lp,i+1)\n",
+    "    print('{:8s} = {:6.2f}'.format(nm,cons[i]))\n",
     "\n",
+    "print('\\nverification:\\n')    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we delete the model data structures. This is good practice. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "lpsolve('delete_lp', lp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is much functionality which is not shown in this brief tutorial, especially in the parameters of the solver. The interested reader can read the LPSOLVE API and experiment with it. "
    ]
   }
  ],
