--- a/Notebook/Calling+LPSOLVE+from+Python.ipynb
+++ b/Notebook/Calling+LPSOLVE+from+Python.ipynb
@@ -8,8 +8,7 @@
     "\n",
     "**LPSOLVE** is an excellent open source solver for mathematical programming problems. It can be used for linear (LP), integer (IP) and mixed integer linear (MILP) problems. It is distributed under the [GNU Lesser General Public License](https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License \"GNU Lesser General Public License\"). \n",
     "\n",
-    "All documentation for LPSOLVE can be found [here](http://lpsolve.sourceforge.net/5.5/ \"LPSOLVE\"). This short tutorial shows how to use LPSOLVE from Python in Windows. It is also available as a Jupiter notebook here **xxxx**.\n",
-    "\n",
+    "All documentation for LPSOLVE can be found [here](http://lpsolve.sourceforge.net/5.5/ \"LPSOLVE\"). This short tutorial shows how to use LPSOLVE from Python in Windows. It is also available as a Jupiter notebook [here](https://github.com/KSpiliop/LPSOLVE_in_Python/blob/master/Notebook/Calling%2BLPSOLVE%2Bfrom%2BPython.ipynb \"Notebook\")\n",
     "\n",
     "<h2 style=\"color:blue;\">Installation of LPSOLVE in Windows</h2> \n",
     "\n",
