--- a/Notebook/Calling+LPSOLVE+from+Python.ipynb
+++ b/Notebook/Calling+LPSOLVE+from+Python.ipynb
@@ -28,14 +28,13 @@
     "\n",
     "<h2 style=\"color:blue;\">The example problem: Warehouse location</h2> \n",
     "\n",
-    "The data for the example are taken from:   \n",
-    "[https://www.ibm.com/support/knowledgecenter/SSSA5P_12.6.2/ilog.odms.ide.help/OPL_Studio/opllanguser/topics/opl_languser_app_areas_IP_warehse.html](https://www.ibm.com/support/knowledgecenter/SSSA5P_12.6.2/ilog.odms.ide.help/OPL_Studio/opllanguser/topics/opl_languser_app_areas_IP_warehse.html \"IBM Link\")\n",
+    "The data for the example are taken from this [ILOG CPLEX Optimization Studio](https://www.ibm.com/support/knowledgecenter/SSSA5P_12.6.2/ilog.odms.ide.help/OPL_Studio/opllanguser/topics/opl_languser_app_areas_IP_warehse.html \"ILOG CPLEX link\") link. \n",
     "\n",
     "In warehouse location problems we are looking for the optimal places of warehouses to serve outlets/ demand points.\n",
     "\n",
     "Suppose we have 5 potential locations for warehouses, **L1,L2,...,L5** and 10 demand points **D1,D2,...,D10**.\n",
     "\n",
-    "The **fixed costs** for the opening of the warehouses are all equal to **30 monetary units**. The operating costs for any assignment of demand point to location are shown in the following table.</h1>     \n",
+    "The **fixed costs** for the operation of the warehouses are all equal to **30 monetary units**. The variable costs (for example transportation costs) for any assignment of demand points to locations are shown in the following table.</h1>     \n",
     "\n",
     "<p style=\"text-align: center;\">  \n",
     "Operating costs</p>\n",
@@ -62,13 +61,14 @@
     "|:--:|:--:|:--:|:--:|:--:|\n",
     "| 1  |  4 | 2  |  1 |  3 |\n",
     "\n",
-    "The **mathematical programming formulation** is given below. cij , i=1,...,10 ; j=1,...,5 are the operating costs and  \n",
+    "The **mathematical programming formulation** is given below. cij , i=1,...,10 ; j=1,...,5 are the variable costs and  \n",
     "fj, j=1,...,5 are the capacities of the locations.\n",
     "\n",
     "- The wij binary variables denote the assignments of demand points to locations : wij=1 if demand point i is assigned to location j, otherwise 0. \n",
-    "- The dj binary variables indicate the selected locations: dj=1 if location j is used, otherwise 0. \n",
+    "- The dj binary variables indicate the selected locations: dj=1 if location j is used, otherwise 0.\n",
+    "- The objective function minimizes the total cost, i.e. the fixed and variable costs. \n",
     "- The first set of constraints ensures that each demand point is allocated to exactly one location.\n",
-    "- The second set of constraints forces each location j to have at most fj demand points.\n",
+    "- The second set of constraints forces each location j to have at most fj demand points and also pushes the wij variables to zero when a location is not selected (note that in a larger problem we would use separate wij <= dj constraints for this).      \n",
     "\n",
     "<img style=\"float: left;\" src=\"https://cloud.githubusercontent.com/assets/12450688/24873799/ee2099c6-1e2a-11e7-980a-43c0090be6c1.jpg\" width=\"400\" height=\"300\" />\n",
     "\n"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -176,12 +176,12 @@
    "source": [
     "Next, we put the variable names using the internal function set_col_name. Note that the indices of variables (columns) and constraints in LPSOLVE are 1-based. \n",
     "\n",
-    "We define the coefficients of the objective function ('set_obj_fn') and we set the direction of optimization to min (set_minim).\n"
+    "We define in a list the coefficients of the objective function ('set_obj_fn') and we set the direction of optimization to min (set_minim).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -250,16 +250,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The last step is to define all variables as binary using 'set_binary'. The last argument (1) is a True flag.\n",
+    "The last step is to define all variables as binary using 'set_binary'. The last argument (1) in these calls is a True flag.\n",
     "\n",
-    "We also export the model in a file, in LP format. This can be used for confirmation or read from the [LPSOLVE IDE](http://lpsolve.sourceforge.net/5.5/IDE.htm \"LPSOLVE IDE\").\n",
+    "We also export the model in a file, in LP format. This can be used for confirmation or read from the [LPSOLVE IDE](http://lpsolve.sourceforge.net/5.5/IDE.htm \"LPSOLVE IDE\"). LPSOLVE also allows the model export into MPS format.\n",
     "\n",
-    "Finally, we call 'solve'. The return code is 0 (success). We can now retrieve the value of the objective function ('get_objective') and the values of the non-zero variables in the solution ('get_variables') using the first element returned. We do NOT dimension any variable to accept the variables as the lpsolve driver takes care of the dimensioning. The same applies for the call to 'get_constraints' to retrieve the LHS at the optimal solution.  "
+    "Finally, we call 'solve'. The return code is 0 (success). We can now retrieve the value of the objective function ('get_objective') and the values of the non-zero variables in the solution ('get_variables') using the first element returned. We do NOT dimension any variable to accept the variables as the lpsolve driver takes care of the dimensioning. The same applies for the call to 'get_constraints' to retrieve the LHS of the constraints at the optimal solution.  \n",
+    "\n",
+    "The optimal solution is to use L1,L2,L3 and L5 and assign:\n",
+    "- D4 to L1\n",
+    "- D2,D6,D7 and D9 to L2\n",
+    "- D8 and D10 to L3\n",
+    "- D1,D3,D5 and D8 to L5\n",
+    "\n",
+    "The capacities are satisfied exactly and the total cost is 383 monetary units."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -305,10 +313,7 @@
       "SECOND2  =   0.00\n",
       "SECOND3  =   0.00\n",
       "SECOND4  =   0.00\n",
-      "SECOND5  =   0.00\n",
-      "\n",
-      "verification:\n",
-      "\n"
+      "SECOND5  =   0.00\n"
      ]
     }
    ],
@@ -334,8 +339,7 @@
     "for i in range(len(cons)):\n",
     "    nm = lpsolve('get_row_name',lp,i+1)\n",
     "    print('{:8s} = {:6.2f}'.format(nm,cons[i]))\n",
-    "\n",
-    "print('\\nverification:\\n')    \n"
+    "\n"
    ]
   },
   {
@@ -347,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
